removes infosection and fixes all other sections. makes lottie visible.

--- a/styles/BestTeamArea.module.css
+++ b/styles/BestTeamArea.module.css
@@ -3,8 +3,8 @@
     height: 110vh;
     padding: 0 30px;
     padding-bottom:40px ;
-    background-color: white;
-    color: #131415;
+    background-color: #131415;
+    color: white;
 }
 .grid{
     padding-top:140px ;
