--- a/styles/ContactArea.module.css
+++ b/styles/ContactArea.module.css
@@ -1,12 +1,15 @@
 .container {
   width: 100%;
+  height: 80vh;
   margin: auto auto auto 0px;
-  padding: 0 30px;
+  padding-top: 100px;
   text-align: center;
-  color: white;
+  background-color: white;
+  color: #131415;
+  padding-top: 40px;
 }
 .container h4 {
-  margin-top: 250px;
+  margin-top: 60px;
   font-size: 26px;
   font-weight: bold;
   line-height: 31px;
@@ -31,14 +34,22 @@
   cursor: pointer;
 }
 @media (max-width: 978px) {
+  .container{
+    padding-top: 20px;
+    height: 60vh;
+  }
   .container h4 {
     font-size: 17px;
+   
   }
   .container h1 {
     font-size: 100px;
   }
 }
 @media (max-width: 450px) {
+  .container{
+    padding-top: 10px;
+  }
   .container h4 {
     margin-top: 20px;
     margin-bottom: 10px;
