--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -28,11 +28,11 @@
   justify-content: center;
   list-style: none;
 }
-.header ul li:hover{
+/* .header ul li:hover{
 -webkit-animation: neon4 1.5s ease-in-out infinite alternate;
 -moz-animation: neon4 1.5s ease-in-out infinite alternate;
 animation: neon4 1.5s ease-in-out infinite alternate;
-}
+} */
 @keyframes neon4 {
   from {
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #fbff00, 0 0 70px #fbff00, 0 0 80px #fbff00, 0 0 100px #fbff00, 0 0 150px #fbff00;
