--- a/styles/VisionArea.module.css
+++ b/styles/VisionArea.module.css
@@ -1,13 +1,13 @@
 .container {
   width: 100%;
-  height: 130vh;
-  padding-top: 100px;
+  height: 150vh;
+  padding-top: 80px;
   background: white;
   color: #151515;
   text-align: center;
 }
 .header {
-  margin-bottom: 150px;
+  margin-bottom: 10px;
   font-size: 45px;
   font-weight: 600;
   line-height: 60px;
